[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scatter"]

[project]
name = "scatter.py"
version = "0.1.0"
description = "Python library for the Scatter chat platform bot API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Kyle Emmerich" },
]
keywords = ["scatter", "chat", "bot", "api"]

dependencies = [
    "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
